<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".Sign_LoginActivity.View.view.LogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/kanit_bold"
            android:padding="15dp"
            android:text="@string/email_address"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                app:boxBackgroundColor="@color/mainColor"
                android:background="@android:color/white"
                tools:layout_editor_absoluteX="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/kanit_bold"
            android:padding="15dp"
            android:text="@string/enter_password"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createPasswordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/mainColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/black"
                app:boxBackgroundColor="@color/mainColor"
                android:background="@android:color/white"
                tools:layout_editor_absoluteX="0dp" />
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/loginBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/mainColor"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/guestBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/mainColor"
            android:text="@string/Guest"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:id="@+id/divider1"
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/orTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/kanit_bold"
            android:gravity="center"
            android:text="OR"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:background="@android:color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/usingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:fontFamily="@font/kanit"
        android:gravity="center"
        android:text="@string/signinTitle"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/googleImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        app:srcCompat="@mipmap/google_icon" />


</LinearLayout>


